--- a/JS/CR2.html
+++ b/JS/CR2.html
@@ -29,8 +29,6 @@
     <script>
 
         function deleteRow(row) {
-            console.log(row.parentNode);
-            console.log(row.parentNode.parentNode);
             row.parentNode.parentNode.remove();
             updateRowInput();
         }
@@ -61,52 +59,39 @@
                     alert('製造商和類別不得為空')
                     return;
                 }
-                console.log(manufacturerInput);
                 let tr1 = document.createElement('tr');
                 tr1.align = 'center'
                 table.appendChild(tr1);
-                let td1 = document.createElement('td');
-                let a1 = `<input type="radio" name="selectRow" onclick="selectRow(this)"/>`;
 
-                td1.innerHTML = a1;
+                let td1 = document.createElement('td');
+                td1.innerHTML = `<input type="radio" name="selectRow" onclick="selectRow(this)"/>`;;
                 tr1.appendChild(td1);
 
                 let td2 = document.createElement('td');
-                let a2 = table.rows.length - 1;
-                td2.innerHTML = a2;
+                td2.innerHTML = table.rows.length - 1;
                 tr1.appendChild(td2);
 
                 let td3 = document.createElement('td');
-                let a3 = manufacturerInput;
-                td3.innerHTML = a3;
+                td3.innerHTML =manufacturerInput;
                 tr1.appendChild(td3);
 
                 let td4 = document.createElement('td');
-                let a4 = typeInput;
-                td4.innerHTML = a4;
+                td4.innerHTML = typeInput;
                 tr1.appendChild(td4);
 
                 let td5 = document.createElement('td');
-                let a5 = minpriceInput;
-                td5.innerHTML = a5;
+                td5.innerHTML = minpriceInput;
                 tr1.appendChild(td5);
 
                 let td6 = document.createElement('td');
-                let a6 = price;
-                td6.innerHTML = a6;
+                td6.innerHTML = price;
                 tr1.appendChild(td6)
 
                 let td7 = document.createElement('td');
-                // let a7 = `<button onclick="deleteRow(this)">刪除</button>`;
-                let a7 = '<button type="button" onclick="deleteRow(this)">刪除</button>';
-                td7.innerHTML = a7;
+                td7.innerHTML = '<button type="button" onclick="deleteRow(this)">刪除</button>';
                 tr1.appendChild(td7);
 
             }
-
-
-            // const clearInput = document.getElementById('clear');
-            // clearInput.addEventListener('click', function clearValue() {
 
             document.getElementById('clear').onclick = function () {
                 document.getElementById('manufacturer').value = '';
@@ -124,12 +109,8 @@
                     <td>售價</td>
                     <td></td>
                 </tr>`;
-                // const table = document.getElementById('table');
-                // while (table.rows.length > 1) {
-                //     deleteRow();
-                // }
-            };
 
+            };
 
             document.getElementById('fix').onclick = function () {
                 let radio = document.getElementsByName('selectRow');
@@ -138,9 +119,7 @@
 
                 for (let radioCont of radio) {
                     if (radioCont.checked === true) {
-                        console.log(radioCont);
                         let radioCont1 = radioCont.parentNode.parentNode;
-                        console.log(radioCont1);
                         let manufacturerInput = document.getElementById('manufacturer').value;
                         let typeInput = document.getElementById('type').value;
                         let minpriceInput = document.getElementById('minprice').value;
@@ -177,7 +156,6 @@
                 <td><input id="price" type="text" /></td>
             </tr>
             <tr>
-
                 <td colspan="6">
                     <div><button id="add">新增</button>　<button id="fix">修改</button>　<button id="clear">清空</button></div>
                 </td>
